# Game

./: CMakeLists.txt  Enemy.cpp  Enemy.hpp  Entity.hpp  Game.cpp  Game.hpp  Layer.cpp  Layer.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Resource_buffer.hpp  Sprite.cpp  Sprite.hpp  Tile_set.cpp  Tile_set.hpp  compile_commands.json  main.cpp
.cache/clangd/index/: main.cpp.01B88A35FDF6E81A.idx
assets/: Tile_map_Collison.csv  collision map.csv  first_terrain.csv
assets/texture_layers/: Tile_map.tmx  Tile_map_Grass.csv  Tile_map_L2.csv  second_trees.csv
rl/: Texture.cpp  Texture.hpp  maths.hpp  operator_overloads.hpp
